Added the game level

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -77,5 +77,8 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/MathNanoProject.Guard.Angle",NewName="/Script/MathNanoProject.Guard.ConeAngle")
-+PropertyRedirects=(OldName="/Script/MathNanoProject.DetectingActor.MovementSpeed",NewName="/Script/MathNanoProject.DetectingActor.TopSpeed")
++PropertyRedirects=(OldName="/Script/MathNanoProject.DetectingActor.MovementSpeed",NewName="/Script/MathNanoProject.DetectingPawn.TopSpeed")
 +ClassRedirects=(OldName="/Script/MathNanoProject.IntersectionActor",NewName="/Script/MathNanoProject.IntersectionSystem")
++ClassRedirects=(OldName="/Script/MathNanoProject.DetectingActor",NewName="/Script/MathNanoProject.DetectingPawn")
++PropertyRedirects=(OldName="/Script/MathNanoProject.DetectingPawn.detectionLength",NewName="/Script/MathNanoProject.DetectingPawn.DetectionLength")
++PropertyRedirects=(OldName="/Script/MathNanoProject.DetectingPawn.RootMesh",NewName="/Script/MathNanoProject.DetectingPawn.Mesh")
